# vvsu-zbis-cpp

./: CMakeLists.txt  main.cpp
task1/: task1.cpp  task1.h
task2/: task21.cpp  task21.h  task22.cpp  task22.h
task3/: task3.cpp  task3.h
task4/: task4.cpp  task4.h
task5/: task5.cpp  task5.h
task61/: Human.cpp  Human.h  task61.cpp  task61.h
task62/: Vector3.cpp  Vector3.h  task62.cpp  task62.h
